<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_col_10"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/dashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_centerVertical="true"
                android:fontFamily="@font/eastman"
                android:textColor="#000000"
                android:textSize="25sp" />

            <ImageView
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:onClick="about"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_information" />

        </RelativeLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:rowCount="1">

            <androidx.cardview.widget.CardView
                android:id="@+id/male_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:onClick="male"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                app:cardBackgroundColor="@color/app_col_7"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/male_clicked"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/ic_male_clicked" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/eastman"
                        android:text="@string/male"
                        android:textColor="#000000"
                        android:textSize="18sp" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/female_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                app:cardBackgroundColor="@color/app_col_7"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:onClick="female"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/female_clicked"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/ic_woman" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/eastman"
                        android:text="@string/female"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            app:cardBackgroundColor="@color/app_col_7"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:fontFamily="@font/eastman"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/height_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/height_def"
                    android:textColor="@android:color/white"
                    android:textSize="35sp" />

                <SeekBar
                    android:id="@+id/seekBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:max="200"
                    android:thumbTint="@color/app_col_10"
                    android:progressBackgroundTint="@color/grey"
                    android:progressTint="@android:color/white"/>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:baselineAligned="false"
                    android:gravity="center_horizontal"
                    android:weightSum="2">

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:rowCount="1">


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:cardBackgroundColor="@color/app_col_7"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/eastman"
                        android:text="@string/weight"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/weight_def"
                        android:textColor="@android:color/white"
                        android:textSize="50sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:baselineAligned="false"
                        android:gravity="center_horizontal"
                        android:weightSum="2">

                        <RelativeLayout
                            android:id="@+id/weight_minus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/circle_background">

                            <ImageView
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:contentDescription="@string/minus"
                                android:padding="14dp"
                                app:srcCompat="@drawable/ic_minus" />

                        </RelativeLayout>


                        <RelativeLayout
                            android:id="@+id/weight_plus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/circle_background">

                            <ImageView
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:padding="3dp"
                                app:srcCompat="@drawable/ic_plus" />

                        </RelativeLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:cardBackgroundColor="@color/app_col_7"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/eastman"
                        android:text="@string/age"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/age_def"
                        android:textColor="@android:color/white"
                        android:textSize="50sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:baselineAligned="false"
                        android:gravity="center_horizontal"
                        android:weightSum="2">

                        <RelativeLayout
                            android:id="@+id/age_minus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/circle_background">

                            <ImageView
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:contentDescription="@string/minus"
                                android:padding="14dp"
                                app:srcCompat="@drawable/ic_minus" />

                        </RelativeLayout>


                        <RelativeLayout
                            android:id="@+id/age_plus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/circle_background">

                            <ImageView
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:padding="3dp"
                                app:srcCompat="@drawable/ic_plus" />

                        </RelativeLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            app:cardBackgroundColor="@color/app_col_7"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="15dp">

             <Button
                 android:id="@+id/calculate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/trans"
                 android:fontFamily="@font/eastman"
                 android:textColor="@color/black"
                 android:text="@string/submit"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>