<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/app_col_10"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/dashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/eastman"
                android:text="@string/abt_dev"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alignmentMode="alignMargins"
            android:columnCount="1"
            android:columnOrderPreserved="false"
            android:rowCount="4">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                app:cardBackgroundColor="@color/app_col_7"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="62dp"
                        android:layout_height="62dp"
                        android:layout_alignParentEnd="true" />

                    <TextView
                        android:id="@+id/abt_bani"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/eastman"
                        android:text="@string/app_name"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/abt_bani"
                        android:layout_marginTop="30dp"
                        android:text="@string/about_bmi"
                        android:fontFamily="@font/eastman"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                app:cardBackgroundColor="@color/app_col_7"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/abt_de"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/eastman"
                        android:text="@string/abt_mk"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/abt_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/abt_de"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/eastman"
                        android:text="@string/about_dev"
                        android:textColor="@color/black"
                        android:textSize="13sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                app:cardBackgroundColor="@color/app_col_7"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/eastman"
                        android:text="@string/contact_title_dev"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/eastman"
                        android:text="@string/contact_dev"
                        android:textColor="@color/black"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </GridLayout>


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alignmentMode="alignMargins"
            android:columnCount="3"
            android:columnOrderPreserved="false"
            android:rowCount="2">


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                app:cardBackgroundColor="@color/app_col_7"
                android:layout_columnWeight="1"
                android:onClick="Gmail"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="62dp"
                        android:layout_height="62dp"
                        android:src="@drawable/ic_gmail"
                        android:layout_gravity="center" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                android:onClick="Twitter"
                app:cardBackgroundColor="@color/app_col_7"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="62dp"
                        android:layout_height="62dp"
                        android:src="@drawable/ic_twitter"
                        android:layout_gravity="center" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                android:onClick="LinkedIn"
                app:cardBackgroundColor="@color/app_col_7"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="62dp"
                        android:layout_height="62dp"
                        android:src="@drawable/ic_linkedin"
                        android:layout_gravity="center" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>

    </LinearLayout>

</LinearLayout>